# eclipsecon-2022-hackathon

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  DEVELOPING.md  MESHMODEL.md  README.md  cloud-provision.sh  preprovision.sh  rust-toolchain.toml
.github/workflows/: ci.yaml
btmesh-operator/: Cargo.toml  Dockerfile
btmesh-operator/deploy/: build-config.yaml  deployment.yaml  image-stream.yaml
btmesh-operator/scripts/: start.sh
btmesh-operator/src/: lib.rs  main.rs  provisioner.rs
console/: .dockerignore  Dockerfile  README.md  pom.xml
console/deploy/: 020-deployment.yaml
console/develop/: CHEATSHEET.md  docker-compose.yaml
console/helm/console/: Chart.yaml  values.yaml
console/helm/console/templates/: build.yaml  deployment.yaml  imagestream.yaml  secret.yaml  service.yaml
console/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar
console/src/main/resources/: application.properties  application.yaml
console/src/main/webapp/: package-lock.json  package.json  webpack.common.js  webpack.dev.js
console/src/main/webapp/src/app/: app.css  backend.ts  (+2 more)
dashboard/: pom.xml
dashboard/helm/dashboard/: Chart.yaml  values.yaml
dashboard/helm/dashboard/templates/: build.yaml  imagestream.yaml  route.yaml  service.yaml
dashboard/src/main/docker/: Dockerfile.native-distroless
dashboard/src/main/resources/: application.yaml
dashboard/src/main/webapp/: package-lock.json  webpack.common.js
deployments/: .gitignore  BOOTSTRAP.md  Makefile  applications.yaml  bootstrap.yaml
deployments/console/templates/: build.yaml  deployment.yaml  secret.yaml
deployments/doppelgaenger/: Chart.yaml  values.yaml
deployments/doppelgaenger-opcua/: .gitignore  Chart.yaml  README.md  values.yaml
deployments/doppelgaenger-opcua/templates/: deployment.yaml  server-key.yaml  service.yaml
deployments/doppelgaenger/templates/: jaeger.yaml  pod-monitor.yaml
deployments/gateways/: README.adoc  placement.yaml  work.yaml
deployments/model-converter/: build-config.yaml  service.yaml
deployments/sso/: gitops-rbac.yaml  kubernetes.yml  kustomization.yaml
deployments/sso-eclipsecon/: Chart.yaml  values.yaml
deployments/sso-eclipsecon/templates/: job.yaml
deployments/twin-operator/: Chart.yaml  values.yaml
deployments/twin-operator/config/: template.yaml
deployments/twin-operator/config/js/: hierarchy.js  syn_acceleration.js  syn_freshness.js  syn_noise.js  syn_temperature.js
deployments/twin-operator/templates/: build-config.yaml  configmap.yaml  deployment.yaml  image-stream.yaml
deployments/web-simulator/: build.yaml  route.yaml  service.yaml
example-apps/: README.md
example-apps/console/: Dockerfile  README.md  pom.xml
example-apps/console/helm/console/templates/: build.yaml  imagestream.yaml  route.yaml
example-apps/console/src/main/resources/: application.yaml
example-apps/dashboard/: Dockerfile  README.md  pom.xml
example-apps/dashboard/helm/dashboard/templates/: build.yaml  deployment.yaml
example-apps/dashboard/src/main/docker/: Dockerfile.jvm
example-apps/dashboard/src/main/resources/: application.yaml
example-apps/device-controller/: .gitignore  README.md  pom.xml
example-apps/device-controller/deploy/: 010-configuration.template.yaml  040-route.yaml
example-apps/websocket-client/: README.md  pom.xml
example-apps/websocket-client/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
example-apps/websockets-events/: README.md  pom.xml
example-microbit-controller/deploy/: 030-service.yaml
example-microbit-controller/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native
example-microbit-controller/src/main/resources/: application.properties
firmware/: .gitignore  Cargo.toml  Embed.toml  README.md  flashsd.sh  memory.x  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: adc.rs  battery.rs  blinker.rs  button.rs  display.rs  main.rs  mic.rs  onoff.rs  sensor.rs  speaker.rs
gateway/: Cargo.toml  Dockerfile  README.md  run.sh
gateway/src/: gateway.rs  lib.rs  main.rs  node_configurator.rs  provisioner.rs  utils.rs
idgen/: adjectives.txt  generate.sh  idmap.json  nouns.txt
infra/: Cargo.toml  DEVELOPING.md  cloud-provision.sh  doit.sh  preprovision.sh
infra/gateway/: Dockerfile  README.md  run_gateway.sh
infra/gateway/develop/: .env  drogue-gateway.service  gateway-compose.yaml  gateway-k8s.yaml  init.sh
infra/gateway/src/: gateway.rs
infra/idgen/: animals.txt  generate.sh
infra/meshd/: Dockerfile  README.md  run_meshd.sh
infra/meshd/config/: config_db.json
infra/meshd/develop/: btm.service
infra/meshd/lib/b67cef0dd1b2451fa54f8d34edba371b/: node.json
infra/meshd/lib/fe8817cb1d0d4250b35de88939277c3a/: node.json
infra/model-converter/: Cargo.toml  Dockerfile  MESHMODEL.md
infra/model-converter/src/: main.rs
infra/pre-provision/: Cargo.toml  README.md  rust-toolchain.toml
infra/pre-provision/src/: main.rs
infra/simulator/: run.sh
infra/simulator/src/: main.rs
meshd/: Dockerfile  README.md
meshd/config/: config_db.json
meshd/lib/b67cef0dd1b2451fa54f8d34edba371b/: node.json
meshd/lib/c6d36b81bd33485685eafa33a3243481/: node.json
meshd/lib/fe8817cb1d0d4250b35de88939277c3a/: node.json
model-converter/: Cargo.toml  Dockerfile  README.md  build-config.yaml
model-converter/deploy/: deployment.yaml  image-stream.yaml  route.yaml
model-converter/src/: main.rs
pre-provision/: Cargo.toml  README.md
pre-provision/src/: main.rs
provisioner/: Cargo.toml  README.md  blemesh.py  device.py  gateway.py
provisioner/src/: main.rs
sensor-model/: Cargo.toml  README.md
sensor-model/src/: lib.rs
simulator/: Cargo.toml  rust-toolchain.toml
simulator/src/: main.rs
twin/: README.adoc  hierarchy.js  syn_batteryLevel.js
web-simulator/: Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf  nginx.sh
web-simulator/assets/: index.css
web-simulator/deploy/: build.yaml  deployment.yaml  imagestream.yaml
web-simulator/src/: app.rs  borrowed.rs  http.rs  main.rs  mqtt.rs  publisher.rs  utils.rs
(+177 files in other folders)
