[package]
name = "btmesh-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"]}
serde = {version = "1", features = ["derive"] }
paho-mqtt = { version = "0.10", features = ["ssl"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.9"
base64 = "0.13.0"
futures = "0.3"
cloudevents-sdk = "0.5"
drogue-client = "0.10"
reqwest = {version = "0.11", default-features = false, features = ["json", "stream", "native-tls"]}
chrono = "0.4"
humantime = "2"
