[package]
name = "eclipsecon-device"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
btmesh-device = { version = "0.1.0" }
btmesh-macro = { version = "0.1.0" }
btmesh-common = { version = "0.1.0" }
btmesh-models = { version = "0.1.0" }
btmesh-nrf-softdevice = { version = "0.1.0", default-features = false, features = ["defmt", "nrf52833", "relay"] }
cortex-m-rt = "0.7"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }

defmt = "0.3"

defmt-rtt = { version = "0.3" }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }

embassy-executor = { version = "0.1.0", default-features = false, features = ["integrated-timers", "nightly"] }
embassy-time = { version = "0.1.0", default-features = false, features = ["defmt-timestamp-uptime", "defmt"] }
embassy-sync = { version = "0.1.0", default-features = false }
microbit-bsp = { git = "https://github.com/drogue-iot/drogue-device.git", rev = "05ef60945cc3736eb7bcba3f2fecb247279fdffa" }

embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52833", "gpiote", "time-driver-rtc1", "nightly", "unstable-traits"] }
embassy-futures = { version = "0.1.0", default-features = false }
heapless = "0.7"
futures = { version = "0.3", default-features = false }

nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "ble-central", "ble-gatt-server", "s140", "nrf52833"] }
nrf-softdevice-s140 = { version = "0.1.0" }

sensor-model = { path = "../sensor-model", features = ["defmt"] }
hex = { version = "0.4.3", default-features = false }

[features]
default = ["panic-probe"]

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "3b58ac1bf86a2373e479e8e3cf92d2df7c29e00b" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "3b58ac1bf86a2373e479e8e3cf92d2df7c29e00b" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "3b58ac1bf86a2373e479e8e3cf92d2df7c29e00b" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "3b58ac1bf86a2373e479e8e3cf92d2df7c29e00b" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "fb9605a108ba45eb022ac9ce7f7be7041efe9523" }
nrf-softdevice-macro = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "fb9605a108ba45eb022ac9ce7f7be7041efe9523" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "fb9605a108ba45eb022ac9ce7f7be7041efe9523" }

#btmesh-common = { git = "https://github.com/drogue-iot/btmesh.git", branch = "main" }
#btmesh-models = { git = "https://github.com/drogue-iot/btmesh.git", branch = "main" }
#btmesh-device = { git = "https://github.com/drogue-iot/btmesh.git", branch = "main" }
#btmesh-macro = { git = "https://github.com/drogue-iot/btmesh.git", branch = "main" }
#btmesh-driver = { git = "https://github.com/drogue-iot/btmesh.git", branch = "main" }
#btmesh-nrf-softdevice = { git = "https://github.com/drogue-iot/btmesh.git", branch = "main" }

btmesh-device = { path = "../../drogue-iot/btmesh/btmesh-device" }
btmesh-macro = { path = "../../drogue-iot/btmesh/btmesh-macro" }
btmesh-common = { path = "../../drogue-iot/btmesh/btmesh-common" }
btmesh-models = { path = "../../drogue-iot/btmesh/btmesh-models" }
btmesh-driver = { path = "../../drogue-iot/btmesh/btmesh-driver" }
btmesh-nrf-softdevice = { path = "../../drogue-iot/btmesh/btmesh-nrf-softdevice" }

#[patch."https://github.com/lulf/microbit-async.git"]
#microbit-async = { path = "../../microbit-async/microbit" }
