[package]
name = "eclipsecon-device"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
btmesh-device = { version = "0.1.0" }
btmesh-macro = { version = "0.1.0" }
btmesh-common = { version = "0.1.0" }
btmesh-models = { version = "0.1.0" }
btmesh-nrf-softdevice = { version = "0.1.0", default-features = false, features = ["defmt", "nrf52833", "relay"] }
#btmesh-nrf-softdevice = { version = "0.1.0", default-features = false, features = ["defmt", "nrf52833"] }
static_cell = "1"
cortex-m-rt = "0.7"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }

defmt = "0.3"

defmt-rtt = { version = "0.3" }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }

embassy-executor = { version = "0.1.0", default-features = false, features = ["integrated-timers", "nightly"] }
embassy-time = { version = "0.1.0", default-features = false, features = ["defmt-timestamp-uptime", "defmt"] }
embassy-sync = { version = "0.1.0", default-features = false }
microbit-bsp = { git = "https://github.com/drogue-iot/drogue-device.git", rev = "f32c5e66f0d29d9299f674ed82babb339b448839" }

embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52833", "gpiote", "time-driver-rtc1", "nightly", "unstable-traits"] }
embassy-futures = { version = "0.1.0", default-features = false }
heapless = "0.7"
futures = { version = "0.3", default-features = false }

nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "ble-central", "ble-gatt-server", "s140", "nrf52833"] }
nrf-softdevice-s140 = { version = "0.1.0" }

sensor-model = { path = "../infra/sensor-model", features = ["defmt"] }
hex = { version = "0.4.3", default-features = false }

[features]
default = ["panic-probe"]

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "99284b830455dde9cd91091e2c1f4dda92936f51" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "99284b830455dde9cd91091e2c1f4dda92936f51" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "99284b830455dde9cd91091e2c1f4dda92936f51" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "99284b830455dde9cd91091e2c1f4dda92936f51" }
nrf-softdevice-macro = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "5dabeac5d85d6ebf184b034054e827fca19a89ab" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "5dabeac5d85d6ebf184b034054e827fca19a89ab" }

# To use a local checkout of drogue-iot/btmesh comment out the following
# patches:
btmesh-common = { git = "https://github.com/drogue-iot/btmesh.git", rev = "684016093ad493cc52f18a68cb4d9255c6ec37c6" }
btmesh-models = { git = "https://github.com/drogue-iot/btmesh.git", rev = "684016093ad493cc52f18a68cb4d9255c6ec37c6" }
btmesh-device = { git = "https://github.com/drogue-iot/btmesh.git", rev = "684016093ad493cc52f18a68cb4d9255c6ec37c6" }
btmesh-macro = { git = "https://github.com/drogue-iot/btmesh.git", rev = "684016093ad493cc52f18a68cb4d9255c6ec37c6" }
btmesh-driver = { git = "https://github.com/drogue-iot/btmesh.git", rev = "684016093ad493cc52f18a68cb4d9255c6ec37c6" }
btmesh-nrf-softdevice = { git = "https://github.com/drogue-iot/btmesh.git", rev = "684016093ad493cc52f18a68cb4d9255c6ec37c6" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "99284b830455dde9cd91091e2c1f4dda92936f51" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "5dabeac5d85d6ebf184b034054e827fca19a89ab" }

# After commenting out the above patches, clone drogue-iot/btmesh:
# git clone git@github.com:drogue-iot/btmesh.git ../../drogue-iot/btmesh
#
# Next comment in the following patches:
#nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", branch = "master" }
#embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }
#btmesh-device = { path = "../../drogue/btmesh/btmesh-device" }
#btmesh-macro = { path = "../../drogue/btmesh/btmesh-macro" }
#btmesh-common = { path = "../../drogue/btmesh/btmesh-common" }
#btmesh-models = { path = "../../drogue/btmesh/btmesh-models" }
#btmesh-driver = { path = "../../drogue/btmesh/btmesh-driver" }
#btmesh-nrf-softdevice = { path = "../../drogue/btmesh/btmesh-nrf-softdevice" }

# At the time of this writing (2022-10-07) it might be required to specify
# '+nightly' when building:
# $ cargo +nightly run --release

# Note that the above cargo command will update Cargo.lock, and if you want to
# switch back to using the non-local drogue-iot/btmesh crates then revert the
# changes to Cargo.lock:
# git checkout Cargo.lock

#[patch."https://github.com/lulf/microbit-async.git"]
#microbit-async = { path = "../../microbit-async/microbit" }
