[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.0", features = ["full"] }
btmesh-common = { version = "0.1.0" }
btmesh-models = { version = "0.1.0" }
heapless = "0.7"

dbus = { version = "0.9"}
dbus-tokio = { version = "0.7", optional = true }
dbus-crossroads = { version = "0.5", optional = true }
futures = "0.3"
pin-project = { version = "1", optional = true }
tokio = { version = "1", features = ["io-std", "io-util", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", optional = true }
hex = { version = "0.4" }
clap = { version = "3", features = ["derive"] }
env_logger = "0.9"
sensor-model = { path = "../sensor-model", features = ["std"] }

[patch.crates-io]
bluer = { git = "https://github.com/dejanb/bluer.git", branch = "mesh" }
btmesh-common = { git = "https://github.com/drogue-iot/btmesh.git", branch = "main" }
btmesh-models = { git = "https://github.com/drogue-iot/btmesh.git", branch = "main" }
