[workspace]
members = [
  "sensor-model",
  "model-converter",
  # Comment the following members if compiling on non-Linux platforms. It will work only on linux platforms with libdbus installed.
  "gateway",
  "simulator",
]

[patch.crates-io]
bluer = { git = "https://github.com/dejanb/bluer.git", branch = "mesh" }
btmesh-common = { git = "https://github.com/drogue-iot/btmesh.git", branch = "main" }
btmesh-models = { git = "https://github.com/drogue-iot/btmesh.git", branch = "main" }

#bluer = { path = "../../bluez/bluer/bluer" }
#btmesh-common = { path = "../../drogue-iot/btmesh/btmesh-common" }
#btmesh-models = { path = "../../drogue-iot/btmesh/btmesh-models" }
