[package]
name = "eclipsecon-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
bluer = { version = "0.15.0", features = ["full"] }
btmesh-common = { version = "0.1.0" }
btmesh-models = { version = "0.1.0" }
heapless = "0.7"

dbus = { version = "0.9"}
dbus-tokio = { version = "0.7", optional = true }
dbus-crossroads = { version = "0.5", optional = true }
futures = "0.3"
pin-project = { version = "1", optional = true }
tokio = { version = "1", features = ["io-std", "io-util", "rt-multi-thread", "signal"] }
hex = { version = "0.4" }
clap = { version = "3", features = ["derive"] }
env_logger = "0.9"
sensor-model = { path = "../sensor-model", features = ["std"] }
confy = "0.5.0"
serde = "1.0.144"
serde_derive = "1.0.144"
