[package]
name = "web-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
web-sys = "0.3.59"
yew = "0.19"
gloo-utils = "0.1"
gloo-dialogs = "0.1"
gloo-timers = "0.2"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.32"
wasm-logger = "0.2"
log = "0.4"
sensor-model = { path = "../sensor-model", features = ["std"] }
heapless = "0.7"
btmesh-common = { version = "0.1.0" }
btmesh-models = { version = "0.1.0" }
