[package]
name = "web-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
getrandom = { version = "0.2", features = ["js"] }
gloo-dialogs = "0.1"
gloo-timers = "0.2"
gloo-utils = "0.1"
heapless = "0.7"
js-sys = "0.3.50"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.32"
wasm-logger = "0.2"
web-sys = "0.3.59"
yew = "0.19"

sensor-model = { path = "../sensor-model", features = ["std"] }

btmesh-common = { version = "0.1.0" }
btmesh-models = { version = "0.1.0" }
