[package]
name = "eclipsecon-model-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
cloudevents-sdk = { version = "0.5", features = ["actix"] }
env_logger = "0.9"
heapless = "0.7"
log = "0.4"
serde_json = "1"
btmesh-common = { version = "0.1.0" }
btmesh-models = { version = "0.1.0" }
sensor-model = { path = "../sensor-model", features = ["std"] }
